--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.jpa.generate-ddl=true
 server.port=${port:8082}
 
 
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=
 
-
-
+#logging.level.org.springframework.web=INFO
+#logging.level.org.hibernate=ERROR
+#logging.level.root=INFO
