--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=12345
 spring.jpa.properties.javax.persistence.validation.mode=none
 spring.jpa.generate-ddl=true
 server.port=${port:8082}
-
+springdoc.api-docs.path=/api-docs
 
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
