--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,20 @@
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/bootcamp-project
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5434/bootcamp-Db
+spring.datasource.username=admin
 spring.datasource.password=12345
 spring.jpa.properties.javax.persistence.validation.mode=none
 spring.jpa.generate-ddl=true
 server.port=${port:8082}
+
 springdoc.api-docs.path=/api-docs
 
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=TobetoLog
 
-#logging.level.org.springframework.web=INFO
-#logging.level.org.hibernate=ERROR
-#logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+logging.level.root=INFO
